--- a/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -17,7 +17,7 @@
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/author']">Authors <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/book']">Books <span class="sr-only"></span></a></li>
-                <li><a href="#">Chosing Db </a></li>
+                <li><a [routerLink]="['/dbconnection']">Chosing Db </a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
