--- a/LibraryAppCore.WebUI/ClientApp/app/components/app/app.component.html
+++ b/LibraryAppCore.WebUI/ClientApp/app/components/app/app.component.html
@@ -3,7 +3,7 @@
         <div>
             <nav-menu></nav-menu>
         </div>
-        <div class='col-sm-2 col-md-9 body-content'>
+        <div class='body-content'>
             <router-outlet></router-outlet>
         </div>
     </div>
