--- a/LibraryAppCore.WebUI/ClientApp/app/components/dbconnection/dbcon.component.html
+++ b/LibraryAppCore.WebUI/ClientApp/app/components/dbconnection/dbcon.component.html
@@ -1,5 +1,5 @@
 ﻿<div>
     <h2> Chose Db </h2>
-    <p><a (click)="choseDb(DefaultConnection)">PostgreSql</a> <a (click)="choseDb(MongoDbConnection)">MongoDb</a></p>
+    <p><a (click)="choseDb(DefaultConnection)">PostgreSql</a> or <a (click)="choseDb(MongoDbConnection)">MongoDb</a></p>
     <div>{{error}}{{chosedDb}}</div>
 </div>
