--- a/LibraryAppCore.WebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryAppCore.WebUI/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
 </head>
 <body>
-    @RenderBody()
-
-    @RenderSection("scripts", required: false)
+    <div class='container'>
+        @RenderBody()
+    </div>
+        @RenderSection("scripts", required: false)
 </body>
 </html>
