migration commit for develop on windows

--- a/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,6 +18,9 @@
                 <li><a [routerLink]="['/author']">Authors <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/book']">Books <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/dbconnection']">Chosing Db </a></li>
+                <li><a [routerLink]="['/login']"> Login </a></li>
+                <li><a [routerLink]="['/registration']"> Registration </a></li>
+
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
