--- a/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/LibraryAppCore.WebUI/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,7 +18,8 @@
                 <li><a [routerLink]="['/author']">Authors <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/book']">Books <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/dbconnection']">Chosing Db </a></li>
-                <li><a [routerLink]="['/login']"> Login </a></li>
+                <li *ngIf="!isUserLogined"><a *ngIf="!isUserLogined" [routerLink]="['/login']"> Login </a></li>
+                <li *ngIf="isUserLogined"><a *ngIf="isUserLogined" [routerLink]="['/logout']"> Log Out </a></li>
                 <li><a [routerLink]="['/registration']"> Registration </a></li>
 
             </ul>
