problem with auth in IdentitiServer

--- a/LibraryAppCore.AuthServer/Views/_ViewImports.cshtml
+++ b/LibraryAppCore.AuthServer/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
 @using Microsoft.AspNetCore.Identity
-@using IdentityApp
-@using IdentityApp.Models
-@using IdentityApp.Models.AccountViewModels
-@using IdentityApp.Models.ManageViewModels
+@using LibraryAppCore.AuthServer
+@using LibraryAppCore.AuthServer.Models
+@using LibraryAppCore.AuthServer.Models.AccountViewModels
+@using LibraryAppCore.AuthServer.Models.ManageViewModels
+@using LibraryAppCore.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using IdentityServer4.Quickstart.UI
+@using LibraryAppCore.AuthServer.Quickstart.UI
