--- a/LibraryAppCore.AuthServer/Views/Shared/_LoginPartial.cshtml
+++ b/LibraryAppCore.AuthServer/Views/Shared/_LoginPartial.cshtml
@@ -1,8 +1,8 @@
 @using Microsoft.AspNetCore.Identity
-@using IdentityApp.Models
+@using LibraryAppCore.Domain.Entities
 
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
