add dotnet ef tols, minor fix in view

--- a/LibraryAppCore.ClientSide/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/navmenu/navmenu.component.html
@@ -18,17 +18,14 @@
                 <li><a [routerLink]="['/author']">Authors <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/book']">Books <span class="sr-only"></span></a></li>
                 <li><a [routerLink]="['/dbconnection']">Chosing Db </a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
                 <li [routerLinkActive]="['link-active']">
                     <a *ngIf="!isAuthorized" (click)="login()" [routerLink]="['/login']"><span class="glyphicon glyphicon-user"></span> Login</a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
                     <a *ngIf="isAuthorized" (click)="logout()"><span class='glyphicon glyphicon-log-out'></span> Logout</a>
                 </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a *ngIf="!isAuthorized" (click)="registration()" [routerLink]="['/registration']"><span class='glyphicon glyphicon-log-out'></span> Registration </a>
-                </li>
-
-
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
