--- a/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
@@ -15,7 +15,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody *ngIf="authors.length > 0">
             <tr [@flyInOut]="state" *ngFor="let author of pagedAuthorItems">
                 <ng-template [ngTemplateOutlet]="loadTemplate(author)"
                              [ngOutletContext]="{ $implicit: author}">
@@ -26,7 +26,7 @@
 </div>
 <div>
     <!-- pagination -->
-    <ul *ngIf="pager.pages && pager.pages.length" class="pagination">
+    <ul *ngIf="pager.pages && pager.pages.length && authors.length > 0" [@flyInOut]="state" class="pagination" >
         <li [ngClass]="{disabled:pager.currentPage === 1}">
             <a (click)="setPage(1)">First</a>
         </li>
