--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -45,19 +45,19 @@
 <div>
      <!--pagination--> 
     <ul *ngIf="pager.pages && pager.pages.length && booksViewModel.length > 0" [@flyInOut]="state" class="pagination">
-        <li [ngClass]="{disabled:pager.currentPage === 1}">
+        <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
             <a (click)="setPage(1)">First</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === 1}">
+        <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
             <a (click)="setPage(pager.currentPage - 1)">Previous</a>
         </li>
-        <li *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+        <li class="pointer" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
             <a (click)="setPage(page)">{{page}}</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+        <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
             <a (click)="setPage(pager.currentPage + 1)">Next</a>
         </li>
-        <li [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
+        <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
             <a (click)="setPage(pager.totalPages)">Last</a>
         </li>
     </ul>
