--- a/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
@@ -7,16 +7,25 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Surname</th>
+                <th class="pointer" (click)="sort('id')">
+                    Id
+                    <i class="fa" [ngClass]="{'fa-sort': column != 'id', 'fa-sort-asc': (column == 'id' && isDesc), 'fa-sort-desc': (column == 'id' && !isDesc) }" aria-hidden="true"> </i>
+                </th>
+                <th class="pointer" (click)="sort('name')">
+                    Name
+                    <i class="fa" [ngClass]="{'fa-sort': column != 'name', 'fa-sort-asc': (column == 'name' && isDesc), 'fa-sort-desc': (column == 'name' && !isDesc) }" aria-hidden="true"> </i>
+                </th>
+                <th class="pointer" (click)="sort('surname')">
+                    Surname
+                    <i class="fa" [ngClass]="{'fa-sort': column != 'surname', 'fa-sort-asc': (column == 'surname' && isDesc), 'fa-sort-desc': (column == 'surname' && !isDesc) }" aria-hidden="true"> </i>
+                </th>
                 <th></th>
                 <th></th>
                 <th></th>
             </tr>
         </thead>
         <tbody *ngIf="authors.length > 0">
-            <tr [@flyInOut]="state" *ngFor="let author of pagedAuthorItems">
+            <tr [@flyInOut]="state" *ngFor="let author of pagedAuthorItems | category: searchText | orderBy: {property: column, direction: direction}">
                 <ng-template [ngTemplateOutlet]="loadTemplate(author)"
                              [ngOutletContext]="{ $implicit: author}">
                 </ng-template>
