--- a/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
@@ -7,17 +7,17 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th class="pointer" (click)="sort('id')">
+                <th class="pointer" (click)="sort('Id', currentAscending)">
                     Id
-                    <i class="fa" [ngClass]="{'fa-sort': column != 'id', 'fa-sort-asc': (column == 'id' && isDesc), 'fa-sort-desc': (column == 'id' && !isDesc) }" aria-hidden="true"> </i>
+                    <i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Id', 'fa-sort-asc': (currentOrderBy == 'Id' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Id' && !currentAscending) }" aria-hidden="true"> </i>
                 </th>
-                <th class="pointer" (click)="sort('name')">
+                <th class="pointer" (click)="sort('Name', currentAscending)">
                     Name
-                    <i class="fa" [ngClass]="{'fa-sort': column != 'name', 'fa-sort-asc': (column == 'name' && isDesc), 'fa-sort-desc': (column == 'name' && !isDesc) }" aria-hidden="true"> </i>
+                    <i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Name', 'fa-sort-asc': (currentOrderBy == 'Name' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Name' && !currentAscending) }" aria-hidden="true"> </i>
                 </th>
-                <th class="pointer" (click)="sort('surname')">
+                <th class="pointer" (click)="sort('Surname', currentAscending)">
                     Surname
-                    <i class="fa" [ngClass]="{'fa-sort': column != 'surname', 'fa-sort-asc': (column == 'surname' && isDesc), 'fa-sort-desc': (column == 'surname' && !isDesc) }" aria-hidden="true"> </i>
+                    <i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Surname', 'fa-sort-asc': (currentOrderBy == 'Surname' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Surname' && !currentAscending) }" aria-hidden="true"> </i>
                 </th>
                 <th></th>
                 <th></th>
@@ -25,7 +25,7 @@
             </tr>
         </thead>
         <tbody *ngIf="authors.length > 0">
-            <tr [@flyInOut]="state" *ngFor="let author of pagedAuthorItems | category: searchText | orderBy: {property: column, direction: direction}">
+            <tr [@flyInOut]="state" *ngFor="let author of authors">
                 <ng-template [ngTemplateOutlet]="loadTemplate(author)"
                              [ngOutletContext]="{ $implicit: author}">
                 </ng-template>
@@ -35,21 +35,21 @@
 </div>
 <div>
     <!-- pagination -->
-    <ul *ngIf="pager.pages && pager.pages.length && authors.length > 0" [@flyInOut]="state" class="pagination" >
-        <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
+    <ul *ngIf="currentPage && totalNumberOfPages && authors.length > 0" [@flyInOut]="state" class="pagination" >
+        <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
             <a (click)="setPage(1)">First</a>
         </li>
-        <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
-            <a (click)="setPage(pager.currentPage - 1)">Previous</a>
+        <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
+            <a (click)="setPage(currentPage - 1)">Previous</a>
         </li>
-        <li class="pointer" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+        <li class="pointer" *ngFor="let page of totalNumberOfPages" [ngClass]="{active:currentPage === page}">
             <a (click)="setPage(page)">{{page}}</a>
         </li>
-        <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-            <a (click)="setPage(pager.currentPage + 1)">Next</a>
+        <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
+            <a (click)="setPage(currentPage + 1)">Next</a>
         </li>
-        <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-            <a (click)="setPage(pager.totalPages)">Last</a>
+        <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
+            <a (click)="setPage(totalNumberOfPages.length)">Last</a>
         </li>
     </ul>
 </div>
