--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -9,32 +9,32 @@
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-                <th class="pointer" (click)="sort('id')">
+                <th class="pointer" (click)="sort('Id', currentAscending)">
 					Id
-					<i class="fa" [ngClass]="{'fa-sort': column != 'id', 'fa-sort-asc': (column == 'id' && isDesc), 'fa-sort-desc': (column == 'id' && !isDesc) }" aria-hidden="true"> </i>
+					<i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Id', 'fa-sort-asc': (currentOrderBy == 'Id' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Id' && !currentAscending) }" aria-hidden="true"> </i>
 				</th>
-                <th class="pointer" (click)="sort('year')">
+                <th class="pointer" (click)="sort('Year', currentAscending)">
 					Year
-					<i class="fa" [ngClass]="{'fa-sort': column != 'year', 'fa-sort-asc': (column == 'year' && isDesc), 'fa-sort-desc': (column == 'year' && !isDesc) }" aria-hidden="true"> </i>
+					<i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Year', 'fa-sort-asc': (currentOrderBy == 'Year' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Year' && !currentAscending) }" aria-hidden="true"> </i>
 				</th>
-                <th class="pointer" (click)="sort('name')">
+                <th class="pointer" (click)="sort('Name', currentAscending)">
 					Name
-					<i class="fa" [ngClass]="{'fa-sort': column != 'name', 'fa-sort-asc': (column == 'name' && isDesc), 'fa-sort-desc': (column == 'name' && !isDesc) }" aria-hidden="true"> </i>
+					<i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Name', 'fa-sort-asc': (currentOrderBy == 'Name' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Name' && !currentAscending) }" aria-hidden="true"> </i>
 				</th>
-                <th class="pointer" (click)="sort('description')">
+                <th class="pointer" (click)="sort('Description', currentAscending)">
 					Description
-					<i class="fa" [ngClass]="{'fa-sort': column != 'description', 'fa-sort-asc': (column == 'description' && isDesc), 'fa-sort-desc': (column == 'description' && !isDesc) }" aria-hidden="true"> </i>
+					<i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'Description', 'fa-sort-asc': (currentOrderBy == 'Description' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'Description' && !currentAscending) }" aria-hidden="true"> </i>
 				</th>
-                <th class="pointer" (click)="sort('authorId')">
+                <th class="pointer" (click)="sort('AuthorId', currentAscending)">
 					Author Name
-					<i class="fa" [ngClass]="{'fa-sort': column != 'authorId', 'fa-sort-asc': (column == 'authorId' && isDesc), 'fa-sort-desc': (column == 'authorId' && !isDesc) }" aria-hidden="true"> </i>
+					<i class="fa" [ngClass]="{'fa-sort': currentOrderBy != 'AuthorId', 'fa-sort-asc': (currentOrderBy == 'AuthorId' && currentAscending), 'fa-sort-desc': (currentOrderBy == 'AuthorId' && !currentAscending) }" aria-hidden="true"> </i>
 				</th>
                 <th></th>
                 <th></th>
             </tr>
         </thead>
         <tbody *ngIf="booksViewModel.length > 0">
-            <tr [@flyInOut]="state" *ngFor="let book of pagedBookItems | category: searchText | orderBy: {property: column, direction: direction}">
+            <tr [@flyInOut]="state" *ngFor="let book of booksViewModel">
                 <ng-template [ngTemplateOutlet]="loadTemplate(book)"
                              [ngOutletContext]="{ $implicit: book}">
                 </ng-template>
@@ -42,34 +42,31 @@
         </tbody>
     </table>
 </div>
-<div>
-    <div class="col-md-10">
-        <!--pagination-->
-        <ul *ngIf="pager.pages && pager.pages.length && booksViewModel.length > 0" [@flyInOut]="state" class="pagination">
-            <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
+<div class="col-md-10">
+        <ul *ngIf="currentPage && totalNumberOfPages && booksViewModel.length > 0" [@flyInOut]="state" class="pagination">
+            <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
                 <a (click)="setPage(1)">First</a>
             </li>
-            <li class="pointer" [ngClass]="{disabled:pager.currentPage === 1}">
-                <a (click)="setPage(pager.currentPage - 1)">Previous</a>
+            <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
+                <a (click)="setPage(currentPage - 1)">Previous</a>
             </li>
-            <li class="pointer" *ngFor="let page of pager.pages" [ngClass]="{active:pager.currentPage === page}">
+            <li class="pointer" *ngFor="let page of totalNumberOfPages" [ngClass]="{active:currentPage === page}">
                 <a (click)="setPage(page)">{{page}}</a>
             </li>
-            <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-                <a (click)="setPage(pager.currentPage + 1)">Next</a>
+            <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
+                <a (click)="setPage(currentPage + 1)">Next</a>
             </li>
-            <li class="pointer" [ngClass]="{disabled:pager.currentPage === pager.totalPages}">
-                <a (click)="setPage(pager.totalPages)">Last</a>
+            <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
+                <a (click)="setPage(totalNumberOfPages.length)">Last</a>
             </li>
         </ul>
     </div>
-    <div class="col-md-2" *ngIf="isAuthorized">
-        <label class="btn btn-default btn-file">
-            Upload <input #fileInput type="file" style="display: none;" accept=".xls,.xlsx" />
-        </label>
-        <button class="btn btn-success" (click)="addFile()" >Send File</button>
-    </div>
-    </div>
+<div class="col-md-2" *ngIf="isAuthorized">
+      <label class="btn btn-default btn-file">
+          Upload <input #fileInput type="file" style="display: none;" accept=".xls,.xlsx" />
+     </label>
+    <button class="btn btn-success" (click)="addFile()" >Send File</button>
+</div>
 <div class="status-message danger">{{statusMessage}}</div>
 
 
