--- a/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.css
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.css
@@ -1,6 +1,4 @@
-﻿body {
-}
-.padding-top-table{
+﻿.padding-top-table{
     padding-top:24px;
 }
 .pointer {
@@ -8,4 +6,9 @@
 }
 .danger {
     color: red;
+}
+.row-count {
+    display: unset;
+    width: 94px;
+    padding: 6px 1px;
 }
