--- a/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/author/author.component.html
@@ -35,7 +35,15 @@
 </div>
 <div>
     <!-- pagination -->
-    <ul *ngIf="currentPage && totalNumberOfPages && authors.length > 0" [@flyInOut]="state" class="pagination" >
+    <ul *ngIf="currentPage && totalNumberOfPages && authors.length > 0" [@flyInOut]="state" class="pagination">
+        <li class="pointer">
+            <select class="row-count form-control" (change)="onRowCountSelected($event.target.value)" name="rowCount">
+                <option value="5">Row count</option>
+                <option value="{{r}}" *ngFor="let r of rowCount">
+                    {{r}}
+                </option>
+            </select>
+        </li>
         <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
             <a (click)="setPage(1)">First</a>
         </li>
