--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -44,6 +44,14 @@
 </div>
 <div class="col-md-10">
         <ul *ngIf="currentPage && totalNumberOfPages && booksViewModel.length > 0" [@flyInOut]="state" class="pagination">
+            <li class="pointer">
+                <select class="row-count form-control" (change)="onRowCountSelected($event.target.value)" name="rowCount">
+                    <option value="5">Row count</option>
+                    <option value="{{r}}" *ngFor="let r of rowCount">
+                        {{r}}
+                    </option>
+                </select>
+            </li>
             <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
                 <a (click)="setPage(1)">First</a>
             </li>
@@ -60,7 +68,7 @@
                 <a (click)="setPage(totalNumberOfPages.length)">Last</a>
             </li>
         </ul>
-    </div>
+</div>
 <div class="col-md-2" *ngIf="isAuthorized">
       <label class="btn btn-default btn-file">
           Upload <input #fileInput type="file" style="display: none;" accept=".xls,.xlsx" />
