add simple modal window.

--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -75,6 +75,11 @@
      </label>
     <button class="btn btn-success" (click)="addFile()" >Send File</button>
 </div>
+
+<app-modal-window [(visible)]="showDialog">
+    <h1>Please wait data is load!</h1>
+</app-modal-window>
+
 <div class="status-message danger">{{statusMessage}}</div>
 
 
