add progress bar like on github

--- a/LibraryAppCore.ClientSide/ClientApp/app/components/home/home.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<ng-progress [color]="'#5cb85c'"></ng-progress>
 <h1>Hello, world!</h1>
 <div [@flyInOut]="state">
 <p>Welcome to your new single-page application, built with:</p>
