--- a/LibraryAppCore.ClientSide/ClientApp/app/components/app/app.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,6 @@
 <div class='container-fluid'>
     <div class='row'>
+        <ng-progress [color]="'#5cb85c'"></ng-progress>
         <div>
             <nav-menu></nav-menu>
         </div>
