--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -1,4 +1,5 @@
-﻿<h1>Books List</h1>
+﻿<ng-progress [color]="'#5cb85c'"></ng-progress>
+<h1>Books List</h1>
 <div>
     <p>
         <input type="button" value="Add Book" class="btn btn-success" (click)="addBook()" *ngIf="isAuthorized" />
