--- a/LibraryAppCore.ClientSide/ClientApp/app/components/modal-window/modal-window.component.css
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/modal-window/modal-window.component.css
@@ -6,9 +6,11 @@
     right: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
+    pointer-events: none;
 }
 
 .dialog {
+    cursor: default;
     z-index: 1000;
     position: fixed;
     right: 0;
