--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -78,7 +78,13 @@
 </div>
 
 <app-modal-window [(visible)]="showDialog">
-    <h1>Please wait data is load!</h1>
+    <h1 class="black">Please wait data is load!</h1>
+    <spinner-component [spinnerShow]="showDialog">
+        <div class="spinner">
+            <div class="double-bounce1"></div>
+            <div class="double-bounce2"></div>
+        </div>
+    </spinner-component>
 </app-modal-window>
 
 <div class="status-message danger">{{statusMessage}}</div>
