--- a/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
+++ b/LibraryAppCore.ClientSide/ClientApp/app/components/book/book.component.html
@@ -59,14 +59,14 @@
             <li class="pointer" [ngClass]="{disabled:currentPage === 1}">
                 <a (click)="setPage(currentPage - 1)">Previous</a>
             </li>
-            <li class="pointer" *ngFor="let page of totalNumberOfPages" [ngClass]="{active:currentPage === page}">
+            <li class="pointer" *ngFor="let page of countNumberOfPages" [ngClass]="{active:currentPage === page}">
                 <a (click)="setPage(page)">{{page}}</a>
             </li>
             <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
                 <a (click)="setPage(currentPage + 1)">Next</a>
             </li>
             <li class="pointer" [ngClass]="{disabled:currentPage === totalNumberOfPages}">
-                <a (click)="setPage(totalNumberOfPages.length)">Last</a>
+                <a (click)="setPage(totalNumberOfPages)">Last</a>
             </li>
         </ul>
 </div>
